--- a/main.css
+++ b/main.css
@@ -39,7 +39,7 @@
 
 }
 .profile{
-  background-color:b ;
+  background-color:blue ;
   font-size: 30px;
   padding: 2%;
   width::50px;
@@ -47,7 +47,7 @@
   text-align: center;
 }
 .content{
-  background-color:;
+  background-color:blue;
   padding: 1%;
   width: 100px;
   margin:1%;
@@ -78,7 +78,7 @@
 
 }
 .profile{
-  background-color:;
+  background-color:blue;
   font-size: 30px;
   padding: 2%;
   width::50px;
